iter_language/tests/corpus/compose/valid/trigger-watch-kinds.iter
queue main file { path = "./.iter/queue" }

trigger sessions watch {
    dir = "/Users/me/.claude/projects"
    include = ["**/*.jsonl"]
    kinds = ["created", "modified"]
    per_file = true
    target = main
}
