iter_language/tests/corpus/compose/invalid/watch-interval-nonpositive.iter
queue main file { path = "./.iter/queue" }

trigger bad watch {
    dir = "./src"
    interval = 0s
    target = main
}
